# tp4

./: .clang-format  BUILD.md  CMakeLists.txt  Makefile  ObjModel.cpp  ObjModel.cxx  ObjModel.hpp  README.md  appveyor.yml  changelog.md  core.cpp  core.hpp  frequentErrors.md  generateStudent  generateStudent.py  main.cpp  testEdge.cpp  testEdgeList.cpp
.github/workflows/: codeql.yml  continuous-integration.yml
cmake/: BoostTestHelper.cmake
objVisualizer/: CMakeLists.txt  Makefile  ObjModel.cxx  ObjModel.hpp  ObjModelsolution.cpp  core.cpp  core.hpp  glutobjsolution.cpp  main.cpp  testEdge.cpp  testEdgeList.cpp
src/: MeshModel.cpp  MeshModel.hpp  ObjModel.cpp  ObjModel.cxx  ObjModel.hpp  core.cpp  core.hpp  geometry.cpp  geometry.hpp  loop.cpp  main.cpp  objReader.cpp  objReader.hpp  openglAll.hpp  rendering.cpp  rendering.hpp
src/tests/: testEdge.cpp  testEdgeList.cpp  test_core.cpp  test_utils.cpp
sujet/: README_GITHOOK.md  loopsubdiv.pdf_tex  setGitHook.sh  sujet.tex
